# rivet_screw

./: .gitattributes  .gitignore  Installation_Instructions.md  README.md  Test5.ipynb  ros-environment-setup.md
docs/: Docker.xmind  Node list  ROS_Platform.xmind  ros-environment-setup.md  ros_Infrastruktur-Map.graphml  syn_ur10_bringup: total_bringup.xmind
festo-valve/: CMakeLists.txt  package.xml
festo-valve/src/: festo_pb2_grpc.py  festo_valve_server.cpp  festo_valve_server.py  festo_valve_server_b.cpp  festo_valve_server_b.py
focus-6000/: CMakeLists.txt  README.md  package.xml  requirements.txt
focus-6000/Open_Protocol/: networking.py  open_protocol.py
focus-6000/src/: client.py  festo_pb2.py  screwing_client.py  screwing_server_b.py
led_connector/: CMakeLists.txt  package.xml
led_connector/launch/: led_connector.launch
led_connector/src/: led_connector_pb2.py  led_connector_pb2_grpc.py  led_grpc_server.py  led_server.py
led_connector/srv/: led.srv
me_scancontrol_b/: CMakeLists.txt
me_scancontrol_b/description/meshes/: scanCONTROL_LLT26xx_29xx.STEP  scanCONTROL_LLT26xx_29xx.dae  scanCONTROL_LLT26xx_29xx.stl
microepsilon_scancontrol/: CMakeLists.txt
microepsilon_scancontrol/description/meshes/: scanCONTROL_2600-100.dae  scanCONTROL_2600-100.stl
microepsilon_scancontrol/scanCONTROL_Linux_SDK_0.1.0/libllt/: libllt.so.1.0
microepsilon_scancontrol/scanCONTROL_Linux_SDK_0.1.0/libmescan/: libmescan.so.1.0
model_loader/: CMakeLists.txt
model_loader/model/: M1-2-010-0-001-A_Jig-Aussenhaut-FAL.stp  platte_mit_schrauben.stl  t.dae
motion_control/: CMakeLists.txt  package.xml
motion_control/config/: avoid_obstacle.cfg  scan_plan.cfg  scan_plan_bu.cfg  tool_angle.cfg  tool_angle_15.cfg
motion_control/launch/: start_avoid_obstacle_motion_control.launch  start_motion_control.launch  start_motion_control_b.launch  start_motion_control_b_2.launch  start_motion_control_c.launch  start_save_pc_control.launch
motion_control/src/: avoid_obstacle.cpp  control_node_b.cpp  control_node_plan_test.cpp  control_node_test.cpp  control_node_test_2.cpp  do_scan.cpp  do_scan.h  do_scan_b.cpp  do_scan_b_2.cpp  do_scan_c.cpp  move_camera.cpp  move_camera_b.cpp  move_camera_c.cpp  point_rivet.cpp  point_rivet_c.cpp  pose_test.cpp  save_pc_control_node.cpp
motion_control/src/head/: do_scan.h  motion_control.h  motion_plan.h
object_localizer/: CMakeLists.txt
object_localizer/SDK_0.2.0/so/: libllt.so.0.2.0  libmescan.so.0.2.0
object_localizer/config/: avoid_obstacle_planner.cfg  point_rivet.cfg  point_rivet_2.cfg  rivet_localizer.cfg  scan_planner.cfg
object_localizer/data/: pc_out_0.ply  pc_out_1.ply
object_localizer/data/pc_data/: pc_out_2_1.ply  pc_out_2_2.ply  pc_out_3_1.ply  pc_out_3_2.ply  pc_out_4_1.ply  pc_out_4_2.ply  pc_out_5_1.ply  pc_out_5_2.ply
object_localizer/data/pcl_data/: pcl_out_0.ply  pcl_out_1.ply  pcl_out_10.ply  pcl_out_2.ply  pcl_out_3.ply  pcl_out_4.ply  pcl_out_5.ply  pcl_out_6.ply  pcl_out_7.ply  pcl_out_8.ply  pcl_out_9.ply
object_localizer/model/model_1/: frozen_inference_graph.pb
object_localizer/model/model_2/: frozen_inference_graph.pb
object_localizer/model/model_3/: frozen_inference_graph.pb
object_localizer/python/object_detection/: eval.py  object_detection_tutorial.ipynb
object_localizer/python/pycocotools/: _mask.c
object_localizer/src/: avoid_obstacle_planner.cpp  avoid_obstacle_planner_b.cpp  box_segmenter.cpp  object_detector.py  pcl_merger.cpp  pcl_merger_b.cpp  profile_merger.cpp  profile_merger_c.cpp  profile_merger_c_thread.0.1.cpp  profile_merger_c_thread.cpp  profile_merger_thread.cpp  rivet_localizer_c.cpp  rivet_localizer_c_15.cpp  rivet_localizer_c_15_new.cpp  rivet_localizer_new.cpp  rough_localizer.cpp  rough_localizer_b.cpp  scan_planner.cpp  scan_planner_b.cpp
object_localizer/src/ProfilesCallback/: GetProfilesCallback.cpp  GetProfilesCallback.h  ProfilesCallback.0.1.h  ProfilesCallback.h  ThreadSafeQueue.h  microepsilon_scancontrol.h  setup
object_localizer/src/head/: PCL_name.h  ProfilesCallback.h  ThreadSafeQueue.h  planner.h  post_process.h  reference_frame.h  rviz_show.h  transform.h  union_find.h
realsense/realsense2_description/rviz/: urdf.rviz
syn_ur10_bringup/config/: ur10.srdf
syn_ur10_bringup/config/joint_ranges/: default.yaml
syn_ur10_bringup/launch/: avoid_obstacle_bringup.launch  demo_bringup.launch  move_group.launch  planning_context.launch  save_pc_bringup.launch  syn_ur10.rviz  syn_ur10_bringup.launch  syn_ur10_bringup_b.launch  syn_ur10_drivers.launch  syn_ur10_rviz.launch  syn_ur10_setup_upload_b.launch  total_bringup.launch  total_bringup_b.launch  total_bringup_b_2.launch  total_bringup_rviz.launch  total_bringup_w_rviz.launch
syn_ur10_bringup/meshes/: Endeffektor.stl  M1-2-010-0-001-A_Jig-Aussenhaut-FAL.stl  ur10_mount.stl
syn_ur10_bringup/urdf/: arm.urdf.xacro  syn_table.urdf.xacro  syn_ur10_setup.urdf.xacro  syn_ur10_setup_b.urdf.xacro  tool.new.urdf.xacro  tool.urdf.xacro  tool_b.urdf.xacro
tpu_connection/: CMakeLists.txt  package.xml
tpu_connection/launch/: tpu_connection.launch
tpu_connection/scripts/: camera_start.sh  image_msg.proto  image_msg_pb2.py  image_msg_pb2_grpc.py  image_transport.py  image_transport_new.py
