<?xml version="1.0"?>
<package format="2">
  <name>festo-valve</name>
  <version>0.1.0</version>
  <description> festo valve </description>
  <license>BSD</license>
  <maintainer email="wangyongseu9@gmail.com">Wang, Yong</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  
</package>
