<?xml version="1.0"?>
<package format="2">
  <name>focus_6000</name>
  <version>0.1.0</version>
  <description>The focus_6000 package</description>
  <license>BSD</license>

  <maintainer email="weiyinxie@gmail.com">weiyinxie</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
